@@ -1,3 +1,7 @@
+2009-01-28  Petr Mikulik  <mikulik@physics.muni.cz>
+
+	* src/breaders.c (edf_filetype_function): Fix for long headers.
+
 2009-01-27  Petr Mikulik  <mikulik@physics.muni.cz>
 
 	* src/pm3d.c (pm3d_plot): Fix for "set pm3d depthorder" ignoring
